client question section added

--- a/index.html
+++ b/index.html
@@ -376,6 +376,18 @@
             </div>
         </div>
         </section>
+        <!-- client questions title start  -->
+           <section class="text-center mt-12 p-2">
+            <h2 class="text-secondary-color text-4xl font-extrabold mb-6">
+                Clients Question
+            </h2>
+            <p>Dit amet consectetur. Condimentum b dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna
+                in sit
+                nullam proin. </p>
+
+
+            <div>
+               <!-- client questions title end  -->
     </main>
     <footer></footer>
 </body>
