get in touch section completed

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <div>
                 <!-- client questions title end  -->
                 <!-- accordian section start  -->
-                <section class="flex justify-center items-center border rounded-2xl p-6 mt-12">
+                <section class="flex justify-center items-center border rounded-2xl p-6 mt-12 border-dotted">
                     <div class="flex flex-col lg:flex-row gap-5">
 
                         <div>
@@ -434,7 +434,7 @@
                                         turpis in magna.</p>
                                 </div>
                             </div>
-                            <div class="collapse collapse-plus  border bottom-1">
+                            <div class="collapse collapse-plus  border bottom-1 ">
                                 <input type="radio" name="my-accordion-3" />
                                 <div class="collapse-title text-xl text-start font-medium">Pricings</div>
                                 <div class="collapse-content">
@@ -446,6 +446,17 @@
                     </div>
                 </section>
                 <!-- acordian section end  -->
+                  <!-- Get In Touch title start  -->
+        <section class="text-center mt-12 p-2 border rounded-2xl border-dotted">
+            <h2 class="text-secondary-color text-4xl font-extrabold mb-6 ">
+                Get In Touch
+            </h2>
+            <p>Dit amet consectetur. Condimentum b dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna
+                in sit
+                nullam proin. </p>
+            <div>
+                <!-- Get In Touch title end  -->
+
     </main>
     <footer></footer>
 </body>
