message  section completed

--- a/index.html
+++ b/index.html
@@ -446,17 +446,69 @@
                     </div>
                 </section>
                 <!-- acordian section end  -->
-                  <!-- Get In Touch title start  -->
-        <section class="text-center mt-12 p-2 border rounded-2xl border-dotted">
-            <h2 class="text-secondary-color text-4xl font-extrabold mb-6 ">
-                Get In Touch
-            </h2>
-            <p>Dit amet consectetur. Condimentum b dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna
-                in sit
-                nullam proin. </p>
-            <div>
-                <!-- Get In Touch title end  -->
+                <!-- Get In Touch title start  -->
+                <section class="text-center mt-12 p-2 border rounded-2xl border-dotted">
+                    <h2 class="text-secondary-color text-4xl font-extrabold mb-6 ">
+                        Get In Touch
+                    </h2>
+                    <p>Dit amet consectetur. Condimentum b dignissim adipiscing aliquam turpis placerat <br> dolor.
+                        Purus urna
+                        in sit
+                        nullam proin. </p>
+                    <div>
+                         </section>
+                        <!-- Get In Touch title end  -->
+                        <section class="flex flex-col lg:flex-row justify-center gap-8 p-6 mt-20">
+                            <div class="border rounded-2xl border-dotted p-12">
+                                <div class="bg-[#BCED6D] p-12 rounded-xl mt-6">
+                                    <img src="Images/Group 1171275317.png" alt="">
+                                    <h2 class="text-gray-500 text-start">Phone Number </h2>
+                                    <p class="text-xl font-extrabold text-secondary-color text-start">(+62) 123-321-543</p>
+                                </div>
+                                <div class="bg-[#FDDD5F] p-12 rounded-xl mt-6">
+                                    <img src="Images/Group 1171275318.png" alt="">
+                                    <h2 class="text-gray-500 text-start">Email </h2>
+                                    <p class="text-xl font-extrabold text-secondary-color text-start">hockeys@support.com</p>
+                                </div>
+                                <div class="bg-[#629cf3] p-12 rounded-xl mt-6">
+                                    <img src="Images/Group 1171275321.png" alt="">
+                                    <h2 class="text-gray-500 text-start">Location </h2>
+                                    <p class="text-xl font-extrabold text-secondary-color text-start">52/1 Mohakhali Wireless Gate</p>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="flex gap-6">
+                                <div>
+                                    <h2 class="text-xl text-secondary-color font-bold">Your Name</h2>
+                                    <input type="text" placeholder="Enter your full name"
+                                        class="input input-bordered input-md w-full max-w-xs bg-[#f7f7ff]" />
+                                </div>
+                                    <div>
+                                        <h2 class="text-xl text-secondary-color font-bold">Your Email</h2>
+                                        <input type="text" placeholder="Enter your email"
+                                            class="input input-bordered input-md w-full max-w-xs bg-[#f7f7ff]" />
+                                    </div>
+                                </div>
+                                <div  class="flex gap-6">
+                                    <div>
 
+                                        <h2 class="text-xl text-secondary-color font-bold">Subject</h2>
+                                        <input type="text" placeholder="Enter your Subject"
+                                            class="input input-bordered input-md w-full max-w-xs bg-[#f7f7ff]" />
+                                        </div>
+                                        <div>
+                                        <h2 class="text-xl text-secondary-color font-bold">Phone Number</h2>
+
+                                        <input type="number" placeholder="Enter your Phone Number"
+                                            class="input input-bordered input-md w-full max-w-xs bg-[#f7f7ff]" />
+                                    </div>
+                                </div>
+                                <h2 class="text-xl text-secondary-color font-bold text-start">Message</h2>
+                                <input type="number" placeholder="Enter your Message"
+                                    class="input input-bordered input-lg w-full max-w-lg h-[370px] bg-[#f7f7ff]" />
+                                    <a class="btn bg-primary-color text-white w-full mt-8">Send Message</a>
+                            </div>
+                        </section>
     </main>
     <footer></footer>
 </body>
