--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="navbar-end">
                 <div class="lg:mr-5">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 " fill="none" viewBox="0 0 24 24"
                         stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
@@ -477,27 +477,27 @@
                                 </div>
                             </div>
                             <div>
-                                <div class="flex gap-6">
+                                <div class="flex flex-col lg:flex-row gap-6">
                                 <div>
-                                    <h2 class="text-xl text-secondary-color font-bold">Your Name</h2>
+                                    <h2 class="text-xl text-secondary-color text-start lg:text-center font-bold">Your Name</h2>
                                     <input type="text" placeholder="Enter your full name"
                                         class="input input-bordered input-md w-full max-w-xs bg-[#f7f7ff]" />
                                 </div>
                                     <div>
-                                        <h2 class="text-xl text-secondary-color font-bold">Your Email</h2>
+                                        <h2 class="text-xl text-secondary-color text-start lg:text-center font-bold">Your Email</h2>
                                         <input type="text" placeholder="Enter your email"
                                             class="input input-bordered input-md w-full max-w-xs bg-[#f7f7ff]" />
                                     </div>
                                 </div>
-                                <div  class="flex gap-6">
+                                <div  class="flex flex-col lg:flex-row gap-6">
                                     <div>
 
-                                        <h2 class="text-xl text-secondary-color font-bold">Subject</h2>
+                                        <h2 class="text-xl text-secondary-color font-bold text-start lg:text-center">Subject</h2>
                                         <input type="text" placeholder="Enter your Subject"
                                             class="input input-bordered input-md w-full max-w-xs bg-[#f7f7ff]" />
                                         </div>
                                         <div>
-                                        <h2 class="text-xl text-secondary-color font-bold">Phone Number</h2>
+                                        <h2 class="text-xl text-secondary-color font-bold text-start lg:text-center">Phone Number</h2>
 
                                         <input type="number" placeholder="Enter your Phone Number"
                                             class="input input-bordered input-md w-full max-w-xs bg-[#f7f7ff]" />
@@ -509,8 +509,39 @@
                                     <a class="btn bg-primary-color text-white w-full mt-8">Send Message</a>
                             </div>
                         </section>
+                        <!-- social media section start  -->
+                        <section class=" p-9 bg-[#f7f7ff]">
+<h2 class="text-2xl font-extrabold text-secondary-color">Social Media</h2>
+<div class="flex gap-4 justify-center mt-6">
+<i class="fa-brands fa-twitter"></i>
+<i class="fa-brands fa-facebook-f"></i>
+<i class="fa-brands fa-instagram"></i>
+<i class="fa-brands fa-github"></i>
+</div>
+                        </section>
     </main>
-    <footer></footer>
+    <footer class="footer bg-neutral text-neutral-content p-10">
+        <nav>
+          <h6 class="footer-title">Services</h6>
+          <a class="link link-hover">Branding</a>
+          <a class="link link-hover">Design</a>
+          <a class="link link-hover">Marketing</a>
+          <a class="link link-hover">Advertisement</a>
+        </nav>
+        <nav>
+          <h6 class="footer-title">Company</h6>
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Contact</a>
+          <a class="link link-hover">Jobs</a>
+          <a class="link link-hover">Press kit</a>
+        </nav>
+        <nav>
+          <h6 class="footer-title">Legal</h6>
+          <a class="link link-hover">Terms of use</a>
+          <a class="link link-hover">Privacy policy</a>
+          <a class="link link-hover">Cookie policy</a>
+        </nav>
+      </footer>
 </body>
 
 </html>
